[gd_scene load_steps=13 format=3 uid="uid://cpvug3wlypb3j"]

[ext_resource type="Script" uid="uid://tqth3ioslss2" path="res://scripts/elevator_controller.gd" id="1_elevator"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(3, 0.2, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_5"]
size = Vector3(3, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_4"]
size = Vector3(0.2, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
size = Vector3(1.3, 2.8, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.6, 0.6, 0.6, 1)
metallic = 1.0
roughness = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_3"]
size = Vector3(0.2, 0.5, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.8, 0, 1)
emission_enabled = true
emission = Color(0.8, 0.8, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(0.2, 0.5, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(3, 0.2, 3)

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 3.0

[node name="Elevator" type="StaticBody3D"]
collision_mask = 0
script = ExtResource("1_elevator")

[node name="ElevatorFloor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="ElevatorBackWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.4)
mesh = SubResource("BoxMesh_5")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="ElevatorLeftWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.5, 0)
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="ElevatorRightWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4, 1.5, 0)
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Doors" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 1.4)

[node name="DoorLeft" type="MeshInstance3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.65, 0, 0)
mesh = SubResource("BoxMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="DoorRight" type="MeshInstance3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65, 0, 0)
mesh = SubResource("BoxMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="CallButton" type="StaticBody3D" parent="." groups=["interactables"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7, 1.2, 0)
collision_layer = 8
collision_mask = 0

[node name="ButtonMesh" type="MeshInstance3D" parent="CallButton"]
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="ButtonCollision" type="CollisionShape3D" parent="CallButton"]
shape = SubResource("BoxShape3D_2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_1")

[node name="ProximityDetection" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ProximityDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_1")

[node name="DoorOpenTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="ProximityDetection" to="." method="_on_proximity_detection_body_entered"]
[connection signal="body_exited" from="ProximityDetection" to="." method="_on_proximity_detection_body_exited"]
[connection signal="timeout" from="DoorOpenTimer" to="." method="_on_door_open_timer_timeout"]
